--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "http://IgnatZakalinsky.github.io/hws2",
+  "homepage": "http://serakss.github.io/domashka",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
